<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CDCDFF"
    tools:context="com.example.my.signinapp.control_room">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/relative_layout">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="1dp"
            android:text="@string/light_control"
            android:textColor="#FF090C38"
            android:textSize="35sp" />

        <Button
            android:id="@+id/button_on"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView6"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_style"
            android:text="@string/on"
            android:textColor="#000000"
            android:textSize="15sp" />

        <Button
            android:id="@+id/button_off"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView6"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@+id/button_on"
            android:layout_toRightOf="@+id/button_on"
            android:background="@drawable/off_button"
            android:text="@string/off"
            android:textColor="#000000"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="42dp"
            android:layout_marginLeft="42dp"
            android:layout_marginTop="69dp"
            android:layout_marginEnd="47dp"
            android:layout_marginRight="47dp"
            android:layout_toEndOf="@+id/button_off"
            android:layout_toRightOf="@+id/button_off"
            android:text="@string/section_one"
            android:textColor="#000000"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button2"
            android:background="@drawable/button_style"
            android:textColor="#000000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="136dp"
            android:text="@string/on"
            android:textSize="15sp"/>

        <Button
            android:id="@+id/button3"
            android:background="@drawable/off_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="111dp"
            android:layout_marginLeft="111dp"
            android:layout_marginTop="136dp"
            android:text="@string/off"
            android:textColor="#000000"
            android:textSize="15sp" />

        <Button
            android:id="@+id/button4"
            android:background="@drawable/button_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="208dp"
            android:text="@string/on"
            android:textColor="#000000"
            android:textSize="15sp"/>

        <Button
            android:id="@+id/button5"
            android:background="@drawable/off_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/button3"
            android:layout_alignLeft="@id/button3"
            android:layout_alignTop="@+id/button4"
            android:text="@string/off"
            android:textSize="15sp"
            android:textColor="#000000"/>

        <Button
            android:id="@+id/button6"
            android:background="@drawable/button_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="284dp"
            android:text="@string/on"
            android:textColor="#000000"
            android:textSize="15sp"/>

        <Button
            android:id="@+id/button7"
            android:background="@drawable/off_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/button3"
            android:layout_alignLeft="@id/button3"
            android:layout_alignTop="@+id/button6"
            android:text="@string/off"
            android:textSize="15sp"/>

        <Button
            android:id="@+id/button8"
            android:background="@drawable/button_style"
            android:textColor="#000000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="363dp"
            android:text="@string/on"
            android:textSize="15sp"/>

        <Button
            android:id="@+id/button9"
            android:background="@drawable/off_button"
            android:textColor="#000000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/button3"
            android:layout_alignLeft="@id/button3"
            android:layout_alignTop="@+id/button8"
            android:text="@string/off"
            android:textSize="15sp"/>

        <Button
            android:id="@+id/button10"
            android:background="@drawable/button_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="439dp"
            android:textColor="#000000"
            android:text="@string/on"
            android:textSize="15sp"/>

        <Button
            android:id="@+id/button11"
            android:background="@drawable/off_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/button3"
            android:layout_alignLeft="@id/button3"
            android:textColor="#000000"
            android:layout_alignTop="@+id/button10"
            android:text="@string/off"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="41dp"
            android:layout_marginLeft="42dp"
            android:layout_marginTop="142dp"
            android:layout_marginEnd="41dp"
            android:layout_marginRight="41dp"
            android:layout_toEndOf="@+id/button3"
            android:layout_toRightOf="@+id/button3"
            android:text="@string/section_two"
            android:textColor="#000000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/button4"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="42dp"
            android:layout_marginLeft="41dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="22dp"
            android:layout_marginRight="22dp"
            android:layout_toEndOf="@+id/button5"
            android:layout_toRightOf="@+id/button5"
            android:text="@string/section_three"
            android:textColor="#000000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/button6"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="42dp"
            android:layout_marginLeft="42dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="33dp"
            android:layout_marginRight="33dp"
            android:layout_toEndOf="@+id/button7"
            android:layout_toRightOf="@+id/button7"
            android:text="@string/section_four"
            android:textColor="#000000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/button8"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="41dp"
            android:layout_marginLeft="41dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="44dp"
            android:layout_marginRight="44dp"
            android:layout_toEndOf="@+id/button9"
            android:layout_toRightOf="@+id/button9"
            android:text="@string/section_five"
            android:textColor="#000000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/button10"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginStart="42dp"
            android:layout_marginLeft="42dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="53dp"
            android:layout_marginRight="53dp"
            android:layout_toEndOf="@+id/button11"
            android:layout_toRightOf="@+id/button11"
            android:text="@string/section_six"
            android:textColor="#000000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_below="@+id/textView11"
            android:layout_marginTop="50dp"
            android:textColor="#FF090C38"
            android:text="@string/light_brightness_control"
            android:textSize="30sp" />

        <SeekBar
            android:id="@+id/seekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView12"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="78dp"
            android:layout_marginLeft="78dp"
            android:layout_marginTop="17dp"
            android:layout_marginEnd="78dp"
            android:layout_marginRight="78dp" />

        <TextView
            android:id="@+id/light_brightness"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_below="@+id/seekBar"
            android:layout_marginTop="20dp"
            android:textColor="#FF090C38"
            android:text="@string/fan_speed_control"
            android:textSize="30sp" />

        <SeekBar
            android:id="@+id/seekBar_two"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/light_brightness"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="78dp"
            android:layout_marginLeft="78dp"
            android:layout_marginTop="17dp"
            android:layout_marginEnd="78dp"
            android:layout_marginRight="78dp" />

        <Button
            android:id="@+id/button12"
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/seekBar_two"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="40dp"
            android:text="@string/disconnect_me"
            android:background="#FDFFFB"
            android:textSize="15sp" />




    </RelativeLayout>
</ScrollView>
